@@ -461,9 +461,11 @@ extern void re_set_registers
   _RE_ARGS ((struct re_pattern_buffer *buffer, struct re_registers *regs,
              unsigned num_regs, regoff_t *starts, regoff_t *ends));
 
-/* 4.2 bsd compatibility.  */
-extern char *re_comp _RE_ARGS ((const char *));
-extern int re_exec _RE_ARGS ((const char *));
+/* 4.2 bsd compatibility.  System headers may declare the argument as
+   either "char *" (e.g. Cray) or "const char *) (e.g. linux), so don't
+   prototype them here.  */
+extern char *re_comp ();
+extern int re_exec ();
 
 /* POSIX compatibility.  */
 extern int regcomp _RE_ARGS ((regex_t *preg, const char *pattern, int cflags));
